<resources>
    <string name="facebook_app_id" translatable="false">1548843298607838</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1548843298607838</string>
    <string name="facebook_application_id" translatable="false">1548843298607838</string>
    <string name="admob_application_id">ca-app-pub-5660469579209926~1005189865</string>
    <string name="app_name">Anime S</string>
    <string name="app_title">Anime S</string>
    <string name="app_version">1.1.3</string>
    <string name="contact_email">ductrungk9haui@gmail.com</string>
    <string name="copyright_text">Copyright @Anime Team \nAll right reserved</string>
    <string name="text_noty">Set password before you edit</string>
    <string name="featured_tv_channels">Featured Tv Channel</string>
    <string name="latest_movie">Latest Movies</string>
    <string name="latest_tv_series">Latest Anime Series</string>
    <string name="topview_tv_series">Top Anime Series</string>
    <string name="more"> ≫</string>
    <string name="movie">Movies</string>
    <string name="live_tv">Live TV</string>
    <string name="tv_series">Series</string>
    <string name="country">Country</string>
    <string name="genre">Genre : </string>
    <string name="favorite">Favorite</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="no_item_found">No item found</string>
    <string name="cast_n_crew">Cast and Crew :</string>
    <string name="signin">Signin</string>
    <string name="reset">Reset Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="director">Director :</string>
    <string name="comments">Comment</string>
    <string name="your_comments">Your Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="no_internet">No internet connection !</string>
    <string name="copyright">Copyright</string>
    <string name="contact_us">Contact Us</string>
    <string name="fetch_error">Unable to fetch data</string>
    <string name="login_first">You need to login first</string>
    <string name="comment_empty">Comment can not empty</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string-array name="nav_item_name">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>
        
        <item>Genre</item>
        <item>Country</item>
        <item>Profile</item>
        <item>Favorite</item>
        <item>Subscription</item>
        <item>Downloads</item>
        <item>Settings</item>
        <item>Sign Out</item>

    </string-array>
    <string-array name="nav_item_image">
        <item>icon_home</item>
        <item>icon_movie</item>
        <item>icon_tv_series</item>
        
        <item>icon_genre</item>
        <item>icon_country</item>
        <item>icon_profile</item>
        <item>icon_favorite</item>
        <item>ic_subscriptions_black_24dp</item>
        <item>icon_download</item>
        <item>icon_setting</item>
        <item>icon_login</item>
    </string-array>
    <string-array name="nav_item_name_2">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>
        
        <item>Genre</item>
        <item>Country</item>
        <item>Login</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_image_2">
        <item>icon_home</item>
        <item>icon_movie</item>
        <item>icon_tv_series</item>
        
        <item>icon_genre</item>
        <item>icon_country</item>
        <item>icon_login</item>
        <item>icon_setting</item>
    </string-array>
    <string-array name="paypal_currency_list">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>ILS</item>
        <item>JPY</item>
        <item>MXN</item>
        <item>TWD</item>
        <item>NZD</item>
        <item>NOK</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SGD</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>THB</item>
    </string-array>
    <string name="year_range_start">1900</string>
    <string name="year_range_end">2021</string>
    <string name="title_activity_item_show">ItemShowActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="play_now">Play Now</string>
    <string name="go_premium">Go Premium</string>
    <string name="program_guide">Program Guide</string>
    <string name="live">Live</string>
    <string name="watching_on">Watching live on</string>
    <string name="all_tv_channel">All TV Channels</string>
    <string name="you_may_also_like">👍 You may also like</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tv_channels">Tv Channels</string>
    <string name="watching_catch_up_tv">Watching Catch-up TV</string>
    <string name="deactive_account_text">If you do not want to use this account you can de-active easily.</string>
    <string name="reason_to_deactivate_account">Reason to deactivate account</string>
    <string name="enter_password">Enter Password</string>
    <string name="long_text">Aliquam eu mauris lectus. Pellentesque lacinia ut urna ut gravida. Proin libero sem, auctor in posuere sit amet</string>
    <string name="terms_condition_text">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Anime S Team.
        Anime S Team is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
The Anime S app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Anime S app won’t work properly or at all.
The app does use third party services that declare their own Terms and Conditions.
Link to Terms and Conditions of third party service providers used by the app like Google Play Services, AdMob, Google Analytics for Firebase, Firebase Crashlytics, Facebook, Appodeal, Unity, One Signal, AppLovin
You should be aware that there are certain things that Anime S Team will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Anime S Team cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.
If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.
Along the same lines, Anime S Team cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Anime S Team cannot accept responsibility.
With respect to Anime S Team’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Anime S Team accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.
At some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Anime S Team does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.
    </string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="explore_by_genre">Explore By Genre</string>
    <string name="explore_by_country">Explore By Country</string>
    <string name="share_this_app">Share This App</string>
    <string name="connect_to_tv">Connect to TV</string>
    <string name="share_body">I would like to share this TV &amp; Movie App.  Here you can download this from playstore :\n    https://play.google.com/store/apps/details?id=</string>
    <string name="term_of_services">Term of Services</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="account_deactivate_info"><![CDATA[Your account will be deactivate & only admin can activate again.]]></string>
    <string name="regular_program">Regular Program</string>
    <string name="international">International</string>
    <string name="server">Server</string>
    <string name="_1080p">1080P</string>
    <string name="dummy_name">Jhon Doe</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="push_notification">Push Notification</string>
    <string name="others">OTHERS</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_subscription_history">No subscription history found.</string>
    <string name="plan">Plan</string>
    <string name="no_active_subscription_found">No active subscription found.</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="p_date">P.Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>