<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/shimmer_view_container"
        layout="@layout/layout_dimmer_home"
        tools:visibility="gone" />

    <tvseries.koreandramaengsub.freemovieapp.view.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shimmer_view_container"
        android:translationZ="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:descendantFocusability="blocksDescendants"
                        android:orientation="vertical">


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:layout_marginBottom="@dimen/spacing_middle" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/slider_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.github.islamkhsh.CardSliderViewPager
                                    android:id="@+id/c_viewPager"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="24dp"
                                    app:auto_slide_time="2"
                                    app:cardSlider_cardCornerRadius="5dp"
                                    app:cardSlider_otherPagesWidth="24dp"
                                    app:cardSlider_pageMargin="12dp" />

                                <!--<com.github.islamkhsh.CardSliderIndicator
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/c_indicator"
                                    android:layout_below="@id/c_viewPager"
                                    android:layout_marginTop="8dp"
                                    android:layout_centerHorizontal="true"/>-->
                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/adView1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:focusable="true"
                                android:gravity="center"
                                android:nextFocusLeft="@id/slider_layout"
                                android:nextFocusRight="@id/genre_layout" />

                            <com.appodeal.ads.BannerView
                                android:id="@+id/appodealBannerView1_home"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:focusable="true"
                                android:nextFocusRight="@id/genre_layout"
                                android:nextFocusLeft="@id/slider_layout"/>


                            <RelativeLayout
                                android:id="@+id/genre_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:focusable="true"
                                android:nextFocusLeft="@id/adView1"
                                android:nextFocusRight="@id/country_layout"
                                android:visibility="gone"
                                tools:visibility="visible">

                                <TextView
                                    android:id="@+id/tv_genre"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:paddingTop="8dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/explore_by_genre"
                                    android:textAppearance="@style/TextAppearance.Medium.Bold" />

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/genre_rv"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_genre"
                                    android:layout_marginTop="8dp">

                                </androidx.recyclerview.widget.RecyclerView>
                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/country_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:visibility="gone"
                                tools:visibility="visible">

                                <TextView
                                    android:id="@+id/tv_country"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:paddingTop="8dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/explore_by_country"
                                    android:textAppearance="@style/TextAppearance.Medium.Bold" />

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/country_rv"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_country"
                                    android:layout_marginTop="8dp">
                                </androidx.recyclerview.widget.RecyclerView>
                            </RelativeLayout>


                            <!--                            <LinearLayout-->
                            <!--                                android:layout_width="match_parent"-->
                            <!--                                android:layout_height="wrap_content"-->
                            <!--                                android:gravity="center_vertical"-->
                            <!--                                android:orientation="horizontal"-->
                            <!--                                android:paddingLeft="@dimen/spacing_large"-->
                            <!--                                android:paddingRight="@dimen/spacing_large">-->

                            <!--                                <TextView-->
                            <!--                                    android:layout_width="0dp"-->
                            <!--                                    android:layout_height="wrap_content"-->
                            <!--                                    android:layout_weight="1"-->
                            <!--                                    android:text="@string/featured_tv_channels"-->
                            <!--                                    android:textAppearance="@style/TextAppearance.Medium.Bold"-->
                            <!--                                    />-->

                            <!--                                <Button-->
                            <!--                                    android:id="@+id/btn_more_tv"-->
                            <!--                                    style="@style/Widget.AppCompat.Button.Borderless"-->
                            <!--                                    android:layout_width="wrap_content"-->
                            <!--                                    android:layout_height="wrap_content"-->
                            <!--                                    android:gravity="center"-->
                            <!--                                    android:minWidth="0dp"-->
                            <!--                                    android:text="@string/more"-->
                            <!--                                    android:textSize="12sp"-->
                            <!--                                    android:textColor="@color/grey_60" />-->

                            <!--                            </LinearLayout>-->

                            <!--                            <androidx.recyclerview.widget.RecyclerView-->
                            <!--                                android:id="@+id/recyclerViewTv"-->
                            <!--                                android:layout_width="match_parent"-->
                            <!--                                android:layout_height="wrap_content" />-->


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="@dimen/spacing_large"
                                android:paddingRight="@dimen/spacing_large">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/latest_tv_series"
                                    android:textAppearance="@style/TextAppearance.Medium.Bold" />

                                <Button
                                    android:id="@+id/btn_more_series"
                                    style="@style/Widget.AppCompat.Button.Borderless"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:minWidth="0dp"
                                    android:text="@string/more"
                                    android:textColor="@color/grey_60"
                                    android:textSize="12sp" />

                            </LinearLayout>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerViewTvSeries"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:scrollbars="vertical"
                                android:scrollingCache="true" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="@dimen/spacing_large"
                                android:paddingRight="@dimen/spacing_large">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/topview_tv_series"
                                    android:textAppearance="@style/TextAppearance.Medium.Bold" />

                                <Button
                                    android:id="@+id/btn_more_series1"
                                    style="@style/Widget.AppCompat.Button.Borderless"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:minWidth="0dp"
                                    android:text="@string/more"
                                    android:textColor="@color/grey_60"
                                    android:textSize="12sp" />

                            </LinearLayout>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerViewTopviewTvSeries"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:scrollbars="vertical"
                                android:scrollingCache="true" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView_by_genre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:scrollbars="vertical"
                                android:scrollingCache="true"></androidx.recyclerview.widget.RecyclerView>

                            <RelativeLayout
                                android:id="@+id/adView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center" />

                            <com.appodeal.ads.BannerView
                                android:id="@+id/appodealBannerView_home"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="@dimen/spacing_large"
                                android:paddingRight="@dimen/spacing_large">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/latest_movie"
                                    android:textAppearance="@style/TextAppearance.Medium.Bold" />

                                <Button
                                    android:id="@+id/btn_more_movie"
                                    style="@style/Widget.AppCompat.Button.Borderless"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:minWidth="0dp"
                                    android:text="@string/more"
                                    android:textColor="@color/grey_60"
                                    android:textSize="12sp" />

                            </LinearLayout>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:scrollbars="vertical"
                                android:scrollingCache="true" />


                        </LinearLayout>

                        <!--<com.google.android.gms.ads.AdView-->
                        <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
                        <!--android:id="@+id/adView"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--ads:adSize="BANNER"-->
                        <!--ads:adUnitId="@string/admob_ad_id">-->
                        <!--</com.google.android.gms.ads.AdView>-->

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </RelativeLayout>
    </tvseries.koreandramaengsub.freemovieapp.view.SwipeRefreshLayout>
</RelativeLayout>